try to fix background image scaling issue on mobile

--- a/static/styles.css
+++ b/static/styles.css
@@ -24,8 +24,11 @@ html, body {
   /* Position and center the image to scale nicely on all screens */
   background-position: center;
   background-repeat: no-repeat;
-  background-size: cover;
   position: relative;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
 }
 
 /* Place text in the middle of the image */
